# chatte

./: .gitignore  ARCHITECTURE.md  README.md
.github/workflows/: build.yml  linux.yml  windows.yml
client/: index.html  package-lock.json  package.json  tsconfig.json
client/src/: App.tsx  api.ts  styles.css
client/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.linux.conf.json
client/src-tauri/src/: lib.rs  main.rs  singbox.rs  store.rs  vpn.rs
server/: Dockerfile  docker-compose.yml  go.mod  main.go  main_test.go  schema.sql  seed.sql
